--- a/ios/Podfile
+++ b/ios/Podfile
@@ -77,6 +77,8 @@ target 'RH_APP' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
   target 'RH_APPTests' do
     inherit! :complete
     # Pods for testing
