--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-status-bar-height": "^2.5.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^1.10.2"
+    "react-navigation-stack": "^1.10.2",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
